--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ title: 梦宇
 email: xtiqin@163.com
 description: >- # this means to ignore newlines until "baseurl:"
   我是一个讲师，一个程序员。
-baseurl: "https://yunp.top" # the subpath of your site, e.g. /blog
-url: "https://yunp.top" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  plter
 
 # Build settings
